--- a/.yamato/universal_hybrid-win-vulkan.yml
+++ b/.yamato/universal_hybrid-win-vulkan.yml
@@ -109,6 +109,7 @@ Build_Universal_Hybrid_Win_Vulkan_Standalone_DOTS_cache_mono_Linear_2020.2:
       -  curl -s https://artifactory.prd.it.unity3d.com/artifactory/unity-tools-local/utr-standalone/utr.bat --output utr.bat
       -  choco install unity-downloader-cli -y -s https://artifactory.prd.it.unity3d.com/artifactory/api/nuget/unity-choco-local
       -  unity-downloader-cli -u {{editor_versions.2020_2_staging.Win.revision}} -c editor -c il2cpp  --wait --published-only
+      -  ./.Editor/Unity.exe -executemethod SetupGraphicsTestCases.PreparePlayerTest
       -  |5-
               git rev-parse HEAD | git show -s --format=%%cI > revdate.tmp
               set /p GIT_REVISIONDATE=<revdate.tmp
@@ -288,6 +289,7 @@ Build_Universal_Hybrid_Win_Vulkan_Standalone_DOTS_cache_mono_Linear_CUSTOM-REVIS
       -  curl -s https://artifactory.prd.it.unity3d.com/artifactory/unity-tools-local/utr-standalone/utr.bat --output utr.bat
       -  choco install unity-downloader-cli -y -s https://artifactory.prd.it.unity3d.com/artifactory/api/nuget/unity-choco-local
       -  unity-downloader-cli --source-file unity_revision.txt -c editor -c il2cpp  --wait --published-only
+      -  ./.Editor/Unity.exe -executemethod SetupGraphicsTestCases.PreparePlayerTest
       -  |5-
               git rev-parse HEAD | git show -s --format=%%cI > revdate.tmp
               set /p GIT_REVISIONDATE=<revdate.tmp
