--- a/com.unity.render-pipelines.universal/Editor/ShaderGraph/Templates/ShaderPass.template
+++ b/com.unity.render-pipelines.universal/Editor/ShaderGraph/Templates/ShaderPass.template
@@ -28,14 +28,14 @@ $splice(PassKeywords)
 $splice(GraphKeywords)
 
 // Defines
-$SurfaceType.Transparent:           #define _SURFACE_TYPE_TRANSPARENT 1
-$AlphaClip: #define _AlphaClip 1
-$Normal: #define _NORMALMAP 1
-$SpecularSetup: #define _SPECULAR_SETUP
-$BlendMode.Add: #define _BLENDMODE_ADD 1
-$BlendMode.Premultiply: #define _ALPHAPREMULTIPLY_ON 1
-$NormalDropOffTS: #define _NORMAL_DROPOFF_TS 1
-$NormalDropOffOS: #define _NORMAL_DROPOFF_OS 1
+$SurfaceType.Transparent:           // UBER SHADER NOW:  #define _SURFACE_TYPE_TRANSPARENT 1
+$AlphaClip:                         // UBER SHADER NOW:  #define _AlphaClip 1
+$Normal:                            #define _NORMALMAP 1
+$SpecularSetup:                     #define _SPECULAR_SETUP
+$BlendMode.Add:                     #define _BLENDMODE_ADD 1
+$BlendMode.Premultiply:             #define _ALPHAPREMULTIPLY_ON 1
+$NormalDropOffTS:                   #define _NORMAL_DROPOFF_TS 1
+$NormalDropOffOS:                   #define _NORMAL_DROPOFF_OS 1
 $NormalDropOffWS: #define _NORMAL_DROPOFF_WS 1
 $Attributes.normalOS: #define ATTRIBUTES_NEED_NORMAL
 $Attributes.tangentOS: #define ATTRIBUTES_NEED_TANGENT
