--- a/TestProjects/UniversalHybridTest/Packages/manifest.json
+++ b/TestProjects/UniversalHybridTest/Packages/manifest.json
@@ -15,10 +15,10 @@
         "com.unity.render-pipelines.universal": "file:../../../com.unity.render-pipelines.universal",
         "com.unity.rendering.hybrid": "0.11.0-preview.42",
         "com.unity.shadergraph": "file:../../../com.unity.shadergraph",
-        "com.unity.test-framework": "1.1.16",
+        "com.unity.test-framework": "1.2.1-preview.4",
         "com.unity.test-framework.build": "0.0.1-preview.12",
         "com.unity.test-framework.utp-reporter": "0.2.3-preview",
-        "com.unity.testframework.graphics": "7.8.2-preview",
+        "com.unity.testframework.graphics": "7.8.5-preview",
         "com.unity.textmeshpro": "3.0.0-preview.1",
         "com.unity.timeline": "1.2.6",
         "com.unity.ugui": "1.0.0",
