--- a/com.unity.visualeffectgraph/package.json
+++ b/com.unity.visualeffectgraph/package.json
@@ -13,7 +13,7 @@
     "particles"
   ],
   "dependencies": {
-    "com.unity.shadergraph": "10.4.0"
+    "com.unity.shadergraph": "10.4.0",
     "com.unity.render-pipelines.core": "10.4.0"
   },
   "samples": [
